updated Middleware USB Drivers. Still unstable under windows when connect to serial monitor software!!!

--- a/firmware/STM32_Workspace/Display_Development/F469Disco_demo.ioc
+++ b/firmware/STM32_Workspace/Display_Development/F469Disco_demo.ioc
@@ -122,70 +122,71 @@ Mcu.Pin20=PI9
 Mcu.Pin21=PH13
 Mcu.Pin22=PH14
 Mcu.Pin23=PI0
-Mcu.Pin24=DSIHOST_D1P
-Mcu.Pin25=DSIHOST_D1N
-Mcu.Pin26=PH0/OSC_IN
-Mcu.Pin27=PF2
-Mcu.Pin28=PH1/OSC_OUT
-Mcu.Pin29=PF3
+Mcu.Pin24=PA9
+Mcu.Pin25=DSIHOST_D1P
+Mcu.Pin26=DSIHOST_D1N
+Mcu.Pin27=PH0/OSC_IN
+Mcu.Pin28=PF2
+Mcu.Pin29=PH1/OSC_OUT
 Mcu.Pin3=PB9
-Mcu.Pin30=DSIHOST_CKP
-Mcu.Pin31=DSIHOST_CKN
-Mcu.Pin32=PG8
-Mcu.Pin33=PF4
-Mcu.Pin34=PH3
-Mcu.Pin35=DSIHOST_D0P
-Mcu.Pin36=DSIHOST_D0N
-Mcu.Pin37=PF5
-Mcu.Pin38=PH2
-Mcu.Pin39=PD15
+Mcu.Pin30=PF3
+Mcu.Pin31=DSIHOST_CKP
+Mcu.Pin32=DSIHOST_CKN
+Mcu.Pin33=PG8
+Mcu.Pin34=PF4
+Mcu.Pin35=PH3
+Mcu.Pin36=DSIHOST_D0P
+Mcu.Pin37=DSIHOST_D0N
+Mcu.Pin38=PF5
+Mcu.Pin39=PH2
 Mcu.Pin4=PG15
-Mcu.Pin40=PD10
-Mcu.Pin41=PD14
-Mcu.Pin42=PD9
-Mcu.Pin43=PD8
-Mcu.Pin44=PC0
-Mcu.Pin45=PF12
-Mcu.Pin46=PG1
-Mcu.Pin47=PF15
-Mcu.Pin48=PH12
-Mcu.Pin49=PF13
+Mcu.Pin40=PD15
+Mcu.Pin41=PD10
+Mcu.Pin42=PD14
+Mcu.Pin43=PD9
+Mcu.Pin44=PD8
+Mcu.Pin45=PC0
+Mcu.Pin46=PF12
+Mcu.Pin47=PG1
+Mcu.Pin48=PF15
+Mcu.Pin49=PH12
 Mcu.Pin5=PD0
-Mcu.Pin50=PG0
-Mcu.Pin51=PE8
-Mcu.Pin52=PG5
-Mcu.Pin53=PG4
-Mcu.Pin54=PH7
-Mcu.Pin55=PH9
-Mcu.Pin56=PH11
-Mcu.Pin57=PF14
-Mcu.Pin58=PJ2
-Mcu.Pin59=PF11
+Mcu.Pin50=PF13
+Mcu.Pin51=PG0
+Mcu.Pin52=PE8
+Mcu.Pin53=PG5
+Mcu.Pin54=PG4
+Mcu.Pin55=PH7
+Mcu.Pin56=PH9
+Mcu.Pin57=PH11
+Mcu.Pin58=PF14
+Mcu.Pin59=PJ2
 Mcu.Pin6=PA12
-Mcu.Pin60=PE9
-Mcu.Pin61=PE11
-Mcu.Pin62=PE14
-Mcu.Pin63=PH8
-Mcu.Pin64=PH10
-Mcu.Pin65=PE7
-Mcu.Pin66=PE10
-Mcu.Pin67=PE12
-Mcu.Pin68=PE15
-Mcu.Pin69=PE13
+Mcu.Pin60=PF11
+Mcu.Pin61=PE9
+Mcu.Pin62=PE11
+Mcu.Pin63=PE14
+Mcu.Pin64=PH8
+Mcu.Pin65=PH10
+Mcu.Pin66=PE7
+Mcu.Pin67=PE10
+Mcu.Pin68=PE12
+Mcu.Pin69=PE15
 Mcu.Pin7=PI4
-Mcu.Pin70=VP_CRC_VS_CRC
-Mcu.Pin71=VP_DMA2D_VS_DMA2D
-Mcu.Pin72=VP_GRAPHICS_VS-STemWin
-Mcu.Pin73=VP_GRAPHICS_VS-DisplayInterface-DSI-LTDC
-Mcu.Pin74=VP_GRAPHICS_VS_Acceleration
-Mcu.Pin75=VP_LTDC_DSIMode
-Mcu.Pin76=VP_SYS_VS_Systick
-Mcu.Pin77=VP_TIM3_VS_ControllerModeReset
-Mcu.Pin78=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin79=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin70=PE13
+Mcu.Pin71=VP_CRC_VS_CRC
+Mcu.Pin72=VP_DMA2D_VS_DMA2D
+Mcu.Pin73=VP_GRAPHICS_VS-STemWin
+Mcu.Pin74=VP_GRAPHICS_VS-DisplayInterface-DSI-LTDC
+Mcu.Pin75=VP_GRAPHICS_VS_Acceleration
+Mcu.Pin76=VP_LTDC_DSIMode
+Mcu.Pin77=VP_SYS_VS_Systick
+Mcu.Pin78=VP_TIM3_VS_ControllerModeReset
+Mcu.Pin79=VP_TIM3_VS_ClockSourceITR
 Mcu.Pin8=PD1
+Mcu.Pin80=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin9=PI3
-Mcu.PinsNb=80
+Mcu.PinsNb=81
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F469NIHx
@@ -210,6 +211,8 @@ PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
+PA9.Mode=Activate_VBUS
+PA9.Signal=USB_OTG_FS_VBUS
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.Mode=I2C
