dsp_Task rudimental implementation (just blinking the RED LED)

--- a/firmware/STM32_Workspace/MotherEnigine/MotherEnigine.ioc
+++ b/firmware/STM32_Workspace/MotherEnigine/MotherEnigine.ioc
@@ -5,6 +5,16 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_13
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
@@ -16,61 +26,70 @@ File.Version=6
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=192.168.001.001
 LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS
-LWIP.IP_ADDRESS=192.168.001.200
+LWIP.IP_ADDRESS=192.168.001.205
 LWIP.LWIP_DHCP=0
 LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
-Mcu.IP1=CORTEX_M7
-Mcu.IP2=DAC
-Mcu.IP3=ETH
-Mcu.IP4=FREERTOS
-Mcu.IP5=LWIP
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
-Mcu.IP8=SYS
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP1=ADC2
+Mcu.IP10=SYS
+Mcu.IP11=USART3
+Mcu.IP2=ADC3
+Mcu.IP3=CORTEX_M7
+Mcu.IP4=DAC
+Mcu.IP5=ETH
+Mcu.IP6=FREERTOS
+Mcu.IP7=LWIP
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=12
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA7
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
-Mcu.Pin15=PB0
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PD8
-Mcu.Pin19=PD9
+Mcu.Pin10=PC3
+Mcu.Pin11=PA0/WKUP
+Mcu.Pin12=PA1
+Mcu.Pin13=PA2
+Mcu.Pin14=PA3
+Mcu.Pin15=PA4
+Mcu.Pin16=PA5
+Mcu.Pin17=PA6
+Mcu.Pin18=PA7
+Mcu.Pin19=PC4
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PG6
-Mcu.Pin21=PG7
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA10
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PG11
-Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PG13
-Mcu.Pin31=PB3
-Mcu.Pin32=PB7
-Mcu.Pin33=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin34=VP_LWIP_VS_Enabled
-Mcu.Pin35=VP_SYS_VS_tim1
-Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PC1
-Mcu.Pin6=PA0/WKUP
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=36
+Mcu.Pin20=PC5
+Mcu.Pin21=PB0
+Mcu.Pin22=PB1
+Mcu.Pin23=PB13
+Mcu.Pin24=PB14
+Mcu.Pin25=PD8
+Mcu.Pin26=PD9
+Mcu.Pin27=PG6
+Mcu.Pin28=PG7
+Mcu.Pin29=PA8
+Mcu.Pin3=PF4
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA11
+Mcu.Pin33=PA12
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=PG11
+Mcu.Pin37=PG13
+Mcu.Pin38=PB3
+Mcu.Pin39=PB7
+Mcu.Pin4=PF5
+Mcu.Pin40=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin41=VP_LWIP_VS_Enabled
+Mcu.Pin42=VP_SYS_VS_tim1
+Mcu.Pin5=PH0/OSC_IN
+Mcu.Pin6=PH1/OSC_OUT
+Mcu.Pin7=PC0
+Mcu.Pin8=PC1
+Mcu.Pin9=PC2
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -127,6 +146,7 @@ PA2.Signal=ETH_MDIO
 PA3.Signal=ADCx_IN3
 PA4.Signal=COMP_DAC1_group
 PA5.Signal=COMP_DAC2_group
+PA6.Signal=ADCx_IN6
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
@@ -144,6 +164,7 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.Signal=ADCx_IN9
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
@@ -161,6 +182,7 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PC0.Signal=ADCx_IN10
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
@@ -176,6 +198,8 @@ PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.Signal=ADCx_IN12
+PC3.Signal=ADCx_IN13
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
 PC4.Locked=true
@@ -204,6 +228,10 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PF4.Mode=IN14
+PF4.Signal=ADC3_IN14
+PF5.Mode=IN15
+PF5.Signal=ADC3_IN15
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
@@ -257,7 +285,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_DAC_Init-DAC-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_LWIP_Init-LWIP-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_DAC_Init-DAC-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_LWIP_Init-LWIP-false-HAL-false,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ADC3_Init-ADC3-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -348,8 +376,18 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN10.0=ADC2_IN10,IN10
+SH.ADCx_IN10.ConfNb=1
+SH.ADCx_IN12.0=ADC2_IN12,IN12
+SH.ADCx_IN12.ConfNb=1
+SH.ADCx_IN13.0=ADC3_IN13,IN13
+SH.ADCx_IN13.ConfNb=1
 SH.ADCx_IN3.0=ADC1_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN9.0=ADC2_IN9,IN9
+SH.ADCx_IN9.ConfNb=1
 SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
 SH.COMP_DAC2_group.0=DAC_OUT2,DAC_OUT2
