--- a/firmware/STM32_Workspace/FrontDisplay/FrontDisplay.ioc
+++ b/firmware/STM32_Workspace/FrontDisplay/FrontDisplay.ioc
@@ -67,16 +67,16 @@ DSIHOST_D1N.Mode=DSIHost_Adapted_TE
 DSIHOST_D1N.Signal=DSIHOST_D1N
 DSIHOST_D1P.Mode=DSIHost_Adapted_TE
 DSIHOST_D1P.Signal=DSIHOST_D1P
-Dma.ADC1.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.3.Instance=DMA2_Stream0
-Dma.ADC1.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.ADC1.3.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.3.Mode=DMA_CIRCULAR
-Dma.ADC1.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.ADC1.3.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.3.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.2.Instance=DMA2_Stream0
+Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.2.Mode=DMA_CIRCULAR
+Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.DAC1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.DAC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.DAC1.0.Instance=DMA1_Stream5
@@ -99,19 +99,41 @@ Dma.DAC2.1.Priority=DMA_PRIORITY_LOW
 Dma.DAC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=DAC1
 Dma.Request1=DAC2
-Dma.Request2=USART6_RX
-Dma.Request3=ADC1
-Dma.RequestsNb=4
-Dma.USART6_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART6_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART6_RX.2.Instance=DMA2_Stream1
-Dma.USART6_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART6_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART6_RX.2.Mode=DMA_CIRCULAR
-Dma.USART6_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART6_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART6_RX.2.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.USART6_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request2=ADC1
+Dma.Request3=USART6_RX
+Dma.Request4=SPI2_RX
+Dma.Request5=SPI2_TX
+Dma.RequestsNb=6
+Dma.SPI2_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.4.Instance=DMA1_Stream3
+Dma.SPI2_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.4.Mode=DMA_CIRCULAR
+Dma.SPI2_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI2_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_TX.5.Instance=DMA1_Stream4
+Dma.SPI2_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.5.Mode=DMA_NORMAL
+Dma.SPI2_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART6_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_RX.3.Instance=DMA2_Stream1
+Dma.USART6_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART6_RX.3.Mode=DMA_CIRCULAR
+Dma.USART6_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_RX.3.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.USART6_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
 FMC.ExitSelfRefreshDelay1=7
 FMC.IPParameters=CASLatency1,SDClockPeriod1,SDClockPeriod2,ReadBurst1,ReadBurst2,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,RowCycleDelay2,WriteRecoveryTime1,RPDelay1,RPDelay2,RCDDelay1
@@ -180,13 +202,14 @@ Mcu.IP10=I2C2
 Mcu.IP11=LTDC
 Mcu.IP12=NVIC
 Mcu.IP13=RCC
-Mcu.IP14=SYS
-Mcu.IP15=TIM3
-Mcu.IP16=TIM4
-Mcu.IP17=USART6
-Mcu.IP18=USB_DEVICE
-Mcu.IP19=USB_OTG_FS
+Mcu.IP14=SPI2
+Mcu.IP15=SYS
+Mcu.IP16=TIM3
+Mcu.IP17=TIM4
+Mcu.IP18=USART6
+Mcu.IP19=USB_DEVICE
 Mcu.IP2=CRC
+Mcu.IP20=USB_OTG_FS
 Mcu.IP3=DAC
 Mcu.IP4=DMA
 Mcu.IP5=DMA2D
@@ -194,114 +217,119 @@ Mcu.IP6=DSIHOST
 Mcu.IP7=FMC
 Mcu.IP8=GRAPHICS
 Mcu.IP9=I2C1
-Mcu.IPNb=20
+Mcu.IPNb=21
 Mcu.Name=STM32F469NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PG14
 Mcu.Pin1=PE1
 Mcu.Pin10=PG12
+Mcu.Pin100=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin11=PD5
-Mcu.Pin12=PD1
-Mcu.Pin13=PI3
-Mcu.Pin14=PI2
-Mcu.Pin15=PA11
-Mcu.Pin16=PF0
-Mcu.Pin17=PI5
-Mcu.Pin18=PI7
-Mcu.Pin19=PI10
+Mcu.Pin12=PD3
+Mcu.Pin13=PD1
+Mcu.Pin14=PI3
+Mcu.Pin15=PI2
+Mcu.Pin16=PA11
+Mcu.Pin17=PF0
+Mcu.Pin18=PI5
+Mcu.Pin19=PI7
 Mcu.Pin2=PE0
-Mcu.Pin20=PI6
-Mcu.Pin21=PK3
-Mcu.Pin22=PG9
-Mcu.Pin23=PD4
-Mcu.Pin24=PH15
-Mcu.Pin25=PI1
-Mcu.Pin26=PF1
-Mcu.Pin27=PI9
-Mcu.Pin28=PH13
-Mcu.Pin29=PH14
+Mcu.Pin20=PI10
+Mcu.Pin21=PI6
+Mcu.Pin22=PK3
+Mcu.Pin23=PG9
+Mcu.Pin24=PD4
+Mcu.Pin25=PH15
+Mcu.Pin26=PI1
+Mcu.Pin27=PF1
+Mcu.Pin28=PI9
+Mcu.Pin29=PH13
 Mcu.Pin3=PB8
-Mcu.Pin30=PI0
-Mcu.Pin31=PA9
-Mcu.Pin32=DSIHOST_D1P
-Mcu.Pin33=DSIHOST_D1N
-Mcu.Pin34=PH0/OSC_IN
-Mcu.Pin35=PF2
-Mcu.Pin36=PH1/OSC_OUT
-Mcu.Pin37=PF3
-Mcu.Pin38=PH4
-Mcu.Pin39=DSIHOST_CKP
+Mcu.Pin30=PH14
+Mcu.Pin31=PI0
+Mcu.Pin32=PA9
+Mcu.Pin33=DSIHOST_D1P
+Mcu.Pin34=DSIHOST_D1N
+Mcu.Pin35=PH0/OSC_IN
+Mcu.Pin36=PF2
+Mcu.Pin37=PH1/OSC_OUT
+Mcu.Pin38=PF3
+Mcu.Pin39=PH4
 Mcu.Pin4=PG13
-Mcu.Pin40=DSIHOST_CKN
-Mcu.Pin41=PG8
-Mcu.Pin42=PF4
-Mcu.Pin43=PH5
-Mcu.Pin44=PH3
-Mcu.Pin45=DSIHOST_D0P
-Mcu.Pin46=DSIHOST_D0N
-Mcu.Pin47=PG6
-Mcu.Pin48=PF5
-Mcu.Pin49=PH2
+Mcu.Pin40=DSIHOST_CKP
+Mcu.Pin41=DSIHOST_CKN
+Mcu.Pin42=PG8
+Mcu.Pin43=PF4
+Mcu.Pin44=PH5
+Mcu.Pin45=PH3
+Mcu.Pin46=DSIHOST_D0P
+Mcu.Pin47=DSIHOST_D0N
+Mcu.Pin48=PG6
+Mcu.Pin49=PF5
 Mcu.Pin5=PB9
-Mcu.Pin50=PD15
-Mcu.Pin51=PD10
-Mcu.Pin52=PD14
-Mcu.Pin53=PD9
-Mcu.Pin54=PD8
-Mcu.Pin55=PC0
-Mcu.Pin56=PC2
-Mcu.Pin57=PF12
-Mcu.Pin58=PG1
-Mcu.Pin59=PF15
+Mcu.Pin50=PH2
+Mcu.Pin51=PD15
+Mcu.Pin52=PD10
+Mcu.Pin53=PD14
+Mcu.Pin54=PD9
+Mcu.Pin55=PD8
+Mcu.Pin56=PC0
+Mcu.Pin57=PC2
+Mcu.Pin58=PF12
+Mcu.Pin59=PG1
 Mcu.Pin6=PG15
-Mcu.Pin60=PH12
-Mcu.Pin61=PA1
-Mcu.Pin62=PA4
-Mcu.Pin63=PF13
-Mcu.Pin64=PG0
-Mcu.Pin65=PE8
-Mcu.Pin66=PG5
-Mcu.Pin67=PG4
-Mcu.Pin68=PH7
-Mcu.Pin69=PH9
+Mcu.Pin60=PF15
+Mcu.Pin61=PH12
+Mcu.Pin62=PA1
+Mcu.Pin63=PA4
+Mcu.Pin64=PF13
+Mcu.Pin65=PG0
+Mcu.Pin66=PE8
+Mcu.Pin67=PG5
+Mcu.Pin68=PG4
+Mcu.Pin69=PH7
 Mcu.Pin7=PD0
-Mcu.Pin70=PH11
-Mcu.Pin71=PA2
-Mcu.Pin72=PA5
-Mcu.Pin73=PF14
-Mcu.Pin74=PJ2
-Mcu.Pin75=PF11
-Mcu.Pin76=PE9
-Mcu.Pin77=PE11
-Mcu.Pin78=PE14
-Mcu.Pin79=PH8
+Mcu.Pin70=PH9
+Mcu.Pin71=PH11
+Mcu.Pin72=PA2
+Mcu.Pin73=PA5
+Mcu.Pin74=PF14
+Mcu.Pin75=PJ2
+Mcu.Pin76=PF11
+Mcu.Pin77=PE9
+Mcu.Pin78=PE11
+Mcu.Pin79=PE14
 Mcu.Pin8=PA12
-Mcu.Pin80=PH10
-Mcu.Pin81=PB1
-Mcu.Pin82=PE7
-Mcu.Pin83=PE10
-Mcu.Pin84=PE12
-Mcu.Pin85=PE15
-Mcu.Pin86=PE13
-Mcu.Pin87=VP_CRC_VS_CRC
-Mcu.Pin88=VP_DMA2D_VS_DMA2D
-Mcu.Pin89=VP_GRAPHICS_VS-STemWin
+Mcu.Pin80=PH8
+Mcu.Pin81=PH10
+Mcu.Pin82=PB1
+Mcu.Pin83=PE7
+Mcu.Pin84=PE10
+Mcu.Pin85=PE12
+Mcu.Pin86=PE15
+Mcu.Pin87=PE13
+Mcu.Pin88=PB14
+Mcu.Pin89=PB15
 Mcu.Pin9=PI4
-Mcu.Pin90=VP_GRAPHICS_VS-DisplayInterface-DSI-LTDC
-Mcu.Pin91=VP_GRAPHICS_VS_Acceleration
-Mcu.Pin92=VP_LTDC_DSIMode
-Mcu.Pin93=VP_SYS_VS_Systick
-Mcu.Pin94=VP_TIM3_VS_ControllerModeReset
-Mcu.Pin95=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin96=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin97=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.PinsNb=98
+Mcu.Pin90=VP_CRC_VS_CRC
+Mcu.Pin91=VP_DMA2D_VS_DMA2D
+Mcu.Pin92=VP_GRAPHICS_VS-STemWin
+Mcu.Pin93=VP_GRAPHICS_VS-DisplayInterface-DSI-LTDC
+Mcu.Pin94=VP_GRAPHICS_VS_Acceleration
+Mcu.Pin95=VP_LTDC_DSIMode
+Mcu.Pin96=VP_SYS_VS_Systick
+Mcu.Pin97=VP_TIM3_VS_ControllerModeReset
+Mcu.Pin98=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin99=VP_TIM4_VS_ClockSourceINT
+Mcu.PinsNb=101
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F469NIHx
 MxCube.Version=4.25.0
 MxDb.Version=DB.4.0.250
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA2D_IRQn=true\:15\:0\:true\:false\:true\:true
@@ -316,6 +344,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.TIM3_IRQn=true\:1\:0\:true\:false\:true\:true
@@ -339,6 +368,11 @@ PA5.Signal=COMP_DAC2_group
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
 PB1.Signal=ADCx_IN9
+PB14.Mode=Full_Duplex_Slave
+PB14.Signal=SPI2_MISO
+PB15.Locked=true
+PB15.Mode=Full_Duplex_Slave
+PB15.Signal=SPI2_MOSI
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.Mode=I2C
@@ -359,6 +393,8 @@ PD1.Signal=FMC_D3_DA3
 PD10.Signal=FMC_D15_DA15
 PD14.Signal=FMC_D0_DA0
 PD15.Signal=FMC_D1_DA1
+PD3.Mode=Full_Duplex_Slave
+PD3.Signal=SPI2_SCK
 PD4.GPIOParameters=GPIO_Label
 PD4.GPIO_Label=LED2
 PD4.Locked=true
@@ -458,7 +494,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=/Users/christiansager/STM32Cube/Repository/STM32Cube_FW_F4_V1.21.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F469NIHx
@@ -478,7 +514,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_CRC_Init-CRC-false-HAL-true,7-GRAPHICS_Init-GRAPHICS-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_ADC2_Init-ADC2-false-HAL-true,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_TIM4_Init-TIM4-false-HAL-true,13-MX_I2C2_Init-I2C2-false-HAL-true,14-MX_USART6_UART_Init-USART6-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_CRC_Init-CRC-false-HAL-true,7-GRAPHICS_Init-GRAPHICS-false-HAL-true,8-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_ADC2_Init-ADC2-false-HAL-true,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_TIM4_Init-TIM4-false-HAL-true,13-MX_I2C2_Init-I2C2-false-HAL-true,14-MX_USART6_UART_Init-USART6-false-HAL-true,15-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=45000000
@@ -647,6 +683,10 @@ SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda1
 SH.FMC_SDNRAS.ConfNb=1
 SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda1
 SH.FMC_SDNWE.ConfNb=1
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction
+SPI2.Mode=SPI_MODE_SLAVE
+SPI2.VirtualType=VM_SLAVE
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=499
 TIM3.Prescaler=8999
