--- a/firmware/STM32_Workspace/MotherEnigine/MotherEnigine.ioc
+++ b/firmware/STM32_Workspace/MotherEnigine/MotherEnigine.ioc
@@ -60,7 +60,29 @@ Dma.ADC2.1.Priority=DMA_PRIORITY_MEDIUM
 Dma.ADC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=ADC1
 Dma.Request1=ADC2
-Dma.RequestsNb=2
+Dma.Request2=USART6_RX
+Dma.Request3=USART6_TX
+Dma.RequestsNb=4
+Dma.USART6_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART6_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_RX.2.Instance=DMA2_Stream1
+Dma.USART6_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART6_RX.2.Mode=DMA_CIRCULAR
+Dma.USART6_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART6_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.3.Instance=DMA2_Stream6
+Dma.USART6_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.3.Mode=DMA_CIRCULAR
+Dma.USART6_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
@@ -158,7 +180,9 @@ MxDb.Version=DB.5.0.40
 NVIC.ADC_IRQn=true\:1\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.DMA2_Stream0_IRQn=true\:1\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA2_Stream1_IRQn=true\:1\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA2_Stream2_IRQn=true\:1\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA2_Stream6_IRQn=true\:1\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.ETH_IRQn=true\:1\:0\:false\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
@@ -173,6 +197,7 @@ NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TIM5_IRQn=true\:1\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
+NVIC.USART6_IRQn=true\:1\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PA0/WKUP.Signal=ADCx_IN0
 PA1.GPIOParameters=GPIO_Label
@@ -377,7 +402,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true,7-MX_LWIP_Init-LWIP-false-HAL-false,8-MX_ADC2_Init-ADC2-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_USART6_UART_Init-USART6-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_DAC_Init-DAC-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_LWIP_Init-LWIP-false-HAL-false,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ADC3_Init-ADC3-false-HAL-true,9-MX_USART6_UART_Init-USART6-false-HAL-true,10-MX_DMA_Init-DMA-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
