--- a/firmware/STM32_Workspace/Encoder/Encoder/Encoder.ioc
+++ b/firmware/STM32_Workspace/Encoder/Encoder/Encoder.ioc
@@ -2,7 +2,7 @@
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=4
 FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE,HEAP_NUMBER
-FREERTOS.Tasks01=LED,0,96,ENCODER_TASK,Default,NULL,Dynamic,NULL,NULL;I2C,-3,96,ComunicationTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=LED,0,96,ENCODER_TASK,Default,NULL,Dynamic,NULL,NULL;I2C,0,96,ComunicationTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=1100
 File.Version=6
 I2C1.IPParameters=OwnAddress
@@ -65,11 +65,13 @@ NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:false\:true\:true\:false
 NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TimeBase=TIM14_IRQn
 NVIC.TimeBaseIP=TIM14
-PA0.GPIOParameters=GPIO_Label
+PA0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0.GPIO_Label=ENCODER2_A
+PA0.GPIO_PuPd=GPIO_PULLUP
 PA0.Signal=S_TIM2_CH1_ETR
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=ENCODER2_B
+PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Signal=S_TIM2_CH2
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
@@ -113,17 +115,21 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=B_ENC1
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Label
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA6.GPIO_Label=ENCODER3_A
+PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Signal=S_TIM3_CH1
-PA7.GPIOParameters=GPIO_Label
+PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA7.GPIO_Label=ENCODER3_B
+PA7.GPIO_PuPd=GPIO_PULLUP
 PA7.Signal=S_TIM3_CH2
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=ENCODER1_A
+PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Signal=S_TIM1_CH1
-PA9.GPIOParameters=GPIO_Label
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=ENCODER1_B
+PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=B_ENC2
@@ -226,9 +232,28 @@ SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
 SH.S_TIM3_CH2.ConfNb=1
+TIM1.EncoderMode=TIM_ENCODERMODE_TI12
+TIM1.IC1Filter=0
+TIM1.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM1.IC2Filter=0
+TIM1.IC2Polarity=TIM_ICPOLARITY_FALLING
+TIM1.IPParameters=Period,EncoderMode,IC1Filter,IC2Filter,IC1Polarity,IC2Polarity
+TIM1.Period=255
 TIM16.IPParameters=Prescaler,Period
 TIM16.Period=10000
 TIM16.Prescaler=48
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IC1Filter=0
+TIM2.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM2.IC2Polarity=TIM_ICPOLARITY_FALLING
+TIM2.IPParameters=Period,EncoderMode,IC1Filter,IC1Polarity,IC2Polarity
+TIM2.Period=255
+TIM3.IC1Filter=0
+TIM3.IC1Polarity=TIM_ICPOLARITY_FALLING
+TIM3.IC2Filter=0
+TIM3.IC2Polarity=TIM_ICPOLARITY_FALLING
+TIM3.IPParameters=Period,IC1Filter,IC2Filter,IC2Polarity,IC1Polarity
+TIM3.Period=255
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
