--- a/firmware/STM32_Workspace/Encoder/Encoder/Encoder.ioc
+++ b/firmware/STM32_Workspace/Encoder/Encoder/Encoder.ioc
@@ -20,9 +20,10 @@ Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
 Dma.RequestsNb=2
+FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=4
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configUSE_CO_ROUTINES
-FREERTOS.Tasks01=LED,0,96,ENCODER_TASK,Default,NULL,Dynamic,NULL,NULL;I2C,0,96,ComunicationTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configUSE_CO_ROUTINES,FootprintOK
+FREERTOS.Tasks01=LED,0,96,ENCODER_TASK,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=1000
 FREERTOS.configUSE_CO_ROUTINES=1
 File.Version=6
@@ -30,7 +31,7 @@ I2C1.Analog_Filter=I2C_ANALOGFILTER_DISABLE
 I2C1.GeneralCallMode=I2C_GENERALCALL_ENABLE
 I2C1.IPParameters=OwnAddress,Analog_Filter,Timing,GeneralCallMode,NoStretchMode
 I2C1.NoStretchMode=I2C_NOSTRETCH_ENABLE
-I2C1.OwnAddress=5
+I2C1.OwnAddress=30
 I2C1.Timing=0x00101D2D
 KeepUserPlacement=false
 Mcu.Family=STM32F0
