basic implementation of AD7606 in MotherEngine. ATTENTION: Relais2 Output was moved from PE6 to PG0 (CN11_59) because it occupied PE port needed for parallel read AD7606. Already respected in Schematic "quantum_AnalougeEngine_V3_2"

--- a/firmware/STM32_Workspace/MotherEnigine/MotherEnigine.ioc
+++ b/firmware/STM32_Workspace/MotherEnigine/MotherEnigine.ioc
@@ -106,8 +106,10 @@ Mcu.IP1=ADC2
 Mcu.IP10=RCC
 Mcu.IP11=SYS
 Mcu.IP12=TIM5
-Mcu.IP13=USART3
-Mcu.IP14=USART6
+Mcu.IP13=TIM6
+Mcu.IP14=TIM7
+Mcu.IP15=USART3
+Mcu.IP16=USART6
 Mcu.IP2=ADC3
 Mcu.IP3=CORTEX_M7
 Mcu.IP4=DAC
@@ -116,62 +118,92 @@ Mcu.IP6=ETH
 Mcu.IP7=FREERTOS
 Mcu.IP8=LWIP
 Mcu.IP9=NVIC
-Mcu.IPNb=15
+Mcu.IPNb=17
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PE6
-Mcu.Pin1=PC13
-Mcu.Pin10=PC2
-Mcu.Pin11=PC3
-Mcu.Pin12=PA0/WKUP
-Mcu.Pin13=PA1
-Mcu.Pin14=PA2
-Mcu.Pin15=PA3
-Mcu.Pin16=PA4
-Mcu.Pin17=PA5
-Mcu.Pin18=PA6
-Mcu.Pin19=PA7
-Mcu.Pin2=PC14/OSC32_IN
-Mcu.Pin20=PC4
-Mcu.Pin21=PC5
-Mcu.Pin22=PB0
-Mcu.Pin23=PB1
-Mcu.Pin24=PG1
-Mcu.Pin25=PB13
-Mcu.Pin26=PB14
-Mcu.Pin27=PD8
-Mcu.Pin28=PD9
-Mcu.Pin29=PG6
-Mcu.Pin3=PC15/OSC32_OUT
-Mcu.Pin30=PG7
-Mcu.Pin31=PC6
-Mcu.Pin32=PC7
-Mcu.Pin33=PA8
-Mcu.Pin34=PA9
-Mcu.Pin35=PA10
-Mcu.Pin36=PA11
-Mcu.Pin37=PA12
-Mcu.Pin38=PA13
-Mcu.Pin39=PA14
-Mcu.Pin4=PF4
-Mcu.Pin40=PG9
-Mcu.Pin41=PG10
-Mcu.Pin42=PG11
-Mcu.Pin43=PG12
-Mcu.Pin44=PG13
-Mcu.Pin45=PG15
-Mcu.Pin46=PB3
-Mcu.Pin47=PB7
-Mcu.Pin48=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin49=VP_LWIP_VS_Enabled
-Mcu.Pin5=PF5
-Mcu.Pin50=VP_SYS_VS_tim1
-Mcu.Pin51=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin6=PH0/OSC_IN
-Mcu.Pin7=PH1/OSC_OUT
-Mcu.Pin8=PC0
-Mcu.Pin9=PC1
-Mcu.PinsNb=52
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PF9
+Mcu.Pin11=PH0/OSC_IN
+Mcu.Pin12=PH1/OSC_OUT
+Mcu.Pin13=PC0
+Mcu.Pin14=PC1
+Mcu.Pin15=PC2
+Mcu.Pin16=PC3
+Mcu.Pin17=PA0/WKUP
+Mcu.Pin18=PA1
+Mcu.Pin19=PA2
+Mcu.Pin2=PE4
+Mcu.Pin20=PA3
+Mcu.Pin21=PA4
+Mcu.Pin22=PA5
+Mcu.Pin23=PA6
+Mcu.Pin24=PA7
+Mcu.Pin25=PC4
+Mcu.Pin26=PC5
+Mcu.Pin27=PB0
+Mcu.Pin28=PB1
+Mcu.Pin29=PG0
+Mcu.Pin3=PE5
+Mcu.Pin30=PG1
+Mcu.Pin31=PE7
+Mcu.Pin32=PE8
+Mcu.Pin33=PE9
+Mcu.Pin34=PE10
+Mcu.Pin35=PE11
+Mcu.Pin36=PE12
+Mcu.Pin37=PE13
+Mcu.Pin38=PE14
+Mcu.Pin39=PE15
+Mcu.Pin4=PE6
+Mcu.Pin40=PB13
+Mcu.Pin41=PB14
+Mcu.Pin42=PD8
+Mcu.Pin43=PD9
+Mcu.Pin44=PG2
+Mcu.Pin45=PG3
+Mcu.Pin46=PG6
+Mcu.Pin47=PG7
+Mcu.Pin48=PC6
+Mcu.Pin49=PC7
+Mcu.Pin5=PC13
+Mcu.Pin50=PC8
+Mcu.Pin51=PC9
+Mcu.Pin52=PA8
+Mcu.Pin53=PA9
+Mcu.Pin54=PA10
+Mcu.Pin55=PA11
+Mcu.Pin56=PA12
+Mcu.Pin57=PA13
+Mcu.Pin58=PA14
+Mcu.Pin59=PC10
+Mcu.Pin6=PC14/OSC32_IN
+Mcu.Pin60=PC11
+Mcu.Pin61=PC12
+Mcu.Pin62=PD1
+Mcu.Pin63=PD2
+Mcu.Pin64=PD6
+Mcu.Pin65=PD7
+Mcu.Pin66=PG9
+Mcu.Pin67=PG10
+Mcu.Pin68=PG11
+Mcu.Pin69=PG12
+Mcu.Pin7=PC15/OSC32_OUT
+Mcu.Pin70=PG13
+Mcu.Pin71=PG15
+Mcu.Pin72=PB3
+Mcu.Pin73=PB7
+Mcu.Pin74=PE0
+Mcu.Pin75=PE1
+Mcu.Pin76=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin77=VP_LWIP_VS_Enabled
+Mcu.Pin78=VP_SYS_VS_tim1
+Mcu.Pin79=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin8=PF4
+Mcu.Pin80=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin81=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin9=PF5
+Mcu.PinsNb=82
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -195,6 +227,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TIM5_IRQn=true\:1\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:1\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:1\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.USART6_IRQn=true\:1\:0\:false\:false\:true\:true\:true\:true
@@ -277,6 +311,18 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=OS2
+PC10.Locked=true
+PC10.Signal=GPIO_Output
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=RANGE
+PC11.Locked=true
+PC11.Signal=GPIO_Output
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=CV_A_B
+PC12.Locked=true
+PC12.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
@@ -303,6 +349,14 @@ PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=OS0
+PC8.Locked=true
+PC8.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=OS1
+PC9.Locked=true
+PC9.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F7x7
 PCC.MCU=STM32F767ZITx
@@ -311,6 +365,22 @@ PCC.Seq0=0
 PCC.Series=STM32F7
 PCC.Temperature=25
 PCC.Vdd=3.6
+PD1.GPIOParameters=GPIO_Label
+PD1.GPIO_Label=DEBUG2
+PD1.Locked=true
+PD1.Signal=GPIO_Output
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=RD
+PD2.Locked=true
+PD2.Signal=GPIO_Output
+PD6.GPIOParameters=GPIO_Label
+PD6.GPIO_Label=FRST
+PD6.Locked=true
+PD6.Signal=GPIO_Input
+PD7.GPIOParameters=GPIO_Label
+PD7.GPIO_Label=CS
+PD7.Locked=true
+PD7.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -321,14 +391,82 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=DB0
+PE0.Locked=true
+PE0.Signal=GPIO_Input
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=DB1
+PE1.Locked=true
+PE1.Signal=GPIO_Input
+PE10.GPIOParameters=GPIO_Label
+PE10.GPIO_Label=DB10
+PE10.Locked=true
+PE10.Signal=GPIO_Input
+PE11.GPIOParameters=GPIO_Label
+PE11.GPIO_Label=DB11
+PE11.Locked=true
+PE11.Signal=GPIO_Input
+PE12.GPIOParameters=GPIO_Label
+PE12.GPIO_Label=DB12
+PE12.Locked=true
+PE12.Signal=GPIO_Input
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=DB13
+PE13.Locked=true
+PE13.Signal=GPIO_Input
+PE14.GPIOParameters=GPIO_Label
+PE14.GPIO_Label=DB14
+PE14.Locked=true
+PE14.Signal=GPIO_Input
+PE15.GPIOParameters=GPIO_Label
+PE15.GPIO_Label=DB15
+PE15.Locked=true
+PE15.Signal=GPIO_Input
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=DB2
+PE2.Locked=true
+PE2.Signal=GPIO_Input
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=DB3
+PE3.Locked=true
+PE3.Signal=GPIO_Input
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=DB4
+PE4.Locked=true
+PE4.Signal=GPIO_Input
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=DB5
+PE5.Locked=true
+PE5.Signal=GPIO_Input
 PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=Relais2
+PE6.GPIO_Label=DB6
 PE6.Locked=true
-PE6.Signal=GPIO_Output
+PE6.Signal=GPIO_Input
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=DB7
+PE7.Locked=true
+PE7.Signal=GPIO_Input
+PE8.GPIOParameters=GPIO_Label
+PE8.GPIO_Label=DB8
+PE8.Locked=true
+PE8.Signal=GPIO_Input
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=DB9
+PE9.Locked=true
+PE9.Signal=GPIO_Input
 PF4.Mode=IN14
 PF4.Signal=ADC3_IN14
 PF5.Mode=IN15
 PF5.Signal=ADC3_IN15
+PF9.GPIOParameters=GPIO_Label
+PF9.GPIO_Label=DEBUG1
+PF9.Locked=true
+PF9.Signal=GPIO_Output
+PG0.GPIOParameters=GPIO_Label
+PG0.GPIO_Label=Relais2
+PG0.Locked=true
+PG0.Signal=GPIO_Output
 PG1.GPIOParameters=GPIO_Label
 PG1.GPIO_Label=Relais1
 PG1.Locked=true
@@ -355,6 +493,14 @@ PG15.GPIOParameters=GPIO_Label
 PG15.GPIO_Label=Relais3
 PG15.Locked=true
 PG15.Signal=GPIO_Output
+PG2.GPIOParameters=GPIO_Label
+PG2.GPIO_Label=RESET
+PG2.Locked=true
+PG2.Signal=GPIO_Output
+PG3.GPIOParameters=GPIO_Label
+PG3.GPIO_Label=BUSY
+PG3.Locked=true
+PG3.Signal=GPIO_Input
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -515,6 +661,12 @@ TIM5.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
 TIM5.Period=1000
 TIM5.Prescaler=216
 TIM5.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=65535
+TIM6.Prescaler=107
+TIM7.IPParameters=Prescaler,Period
+TIM7.Period=65535
+TIM7.Prescaler=107
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART6.BaudRate=115200
@@ -528,5 +680,9 @@ VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=NUCLEO-F767ZI
 boardIOC=true
