--- a/firmware/firmware quantum/updating_test2/updating_test2.ioc
+++ b/firmware/firmware quantum/updating_test2/updating_test2.ioc
@@ -19,15 +19,16 @@ LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=ETH
+Mcu.IP10=USB_OTG_FS
 Mcu.IP2=FREERTOS
 Mcu.IP3=LWIP
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=TIM3
-Mcu.IP8=USART3
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP8=USART1
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -36,34 +37,36 @@ Mcu.Pin10=PC5
 Mcu.Pin11=PB0
 Mcu.Pin12=PB13
 Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PG6
-Mcu.Pin17=PG7
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin14=PB15
+Mcu.Pin15=PD8
+Mcu.Pin16=PD9
+Mcu.Pin17=PG6
+Mcu.Pin18=PG7
+Mcu.Pin19=PA8
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA12
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PG11
-Mcu.Pin26=PG13
-Mcu.Pin27=PB3
-Mcu.Pin28=PB7
-Mcu.Pin29=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA11
+Mcu.Pin23=PA12
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PG11
+Mcu.Pin27=PG13
+Mcu.Pin28=PB3
+Mcu.Pin29=PB6
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=VP_LWIP_VS_Enabled
-Mcu.Pin31=VP_SYS_VS_tim1
-Mcu.Pin32=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin30=PB7
+Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin32=VP_LWIP_VS_Enabled
+Mcu.Pin33=VP_SYS_VS_tim1
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=33
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -150,10 +153,14 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB15.Mode=Asynchronous
+PB15.Signal=USART1_RX
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
@@ -340,6 +347,8 @@ SH.GPXTI13.ConfNb=1
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=1000
 TIM3.Prescaler=216
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
