--- a/firmware/firmware quantum/MotherEnigine/MotherEnigine.ioc
+++ b/firmware/firmware quantum/MotherEnigine/MotherEnigine.ioc
@@ -30,16 +30,19 @@ ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
 ETH.PHY_Value=0
 ETH.PhyAddress=0
-FREERTOS.IPParameters=Tasks01,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY
+FREERTOS.IPParameters=Tasks01,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
 FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=1
+FREERTOS.configTOTAL_HEAP_SIZE=35360
 File.Version=6
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=192.168.001.001
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,LWIP_HTTPD
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,LWIP_HTTPD,MEM_SIZE,MEM_USE_POOLS_TRY_BIGGER_POOL
 LWIP.IP_ADDRESS=192.168.001.205
 LWIP.LWIP_DHCP=0
 LWIP.LWIP_HTTPD=1
+LWIP.MEM_SIZE=5000
+LWIP.MEM_USE_POOLS_TRY_BIGGER_POOL=1
 LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F7
@@ -148,8 +151,8 @@ Mcu.UserName=STM32F767ZITx
 MxCube.Version=5.4.0
 MxDb.Version=DB.5.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.DMA2_Stream1_IRQn=true\:1\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA2_Stream6_IRQn=true\:1\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA2_Stream1_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true
+NVIC.DMA2_Stream6_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.ETH_IRQn=true\:1\:0\:false\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
@@ -159,10 +162,13 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.TIM5_IRQn=true\:1\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM6_DAC_IRQn=true\:1\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:1\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
@@ -297,14 +303,6 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=OS1
 PC9.Locked=true
 PC9.Signal=GPIO_Output
-PCC.Checker=false
-PCC.Line=STM32F7x7
-PCC.MCU=STM32F767ZITx
-PCC.PartNumber=STM32F767ZITx
-PCC.Seq0=0
-PCC.Series=STM32F7
-PCC.Temperature=25
-PCC.Vdd=3.6
 PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=DEBUG2
 PD1.Locked=true
@@ -453,10 +451,10 @@ PG9.Signal=GPIO_Output
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
 PH0/OSC_IN.Locked=true
-PH0/OSC_IN.Mode=HSE-External-Clock-Source
+PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Locked=true
-PH1/OSC_OUT.Mode=HSE-External-Clock-Source
+PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -481,11 +479,12 @@ ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=MotherEnigine.ioc
 ProjectManager.ProjectName=MotherEnigine
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=SW4STM32
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DAC_Init-DAC-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_USART6_UART_Init-USART6-false-HAL-true,7-MX_DMA_Init-DMA-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true,12-MX_TIM10_Init-TIM10-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DAC_Init-DAC-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,6-MX_USART6_UART_Init-USART6-false-HAL-true,7-MX_DMA_Init-DMA-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true,12-MX_TIM10_Init-TIM10-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -582,9 +581,12 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM10_CH1.0=TIM10_CH1,Input_Capture1_from_TI1
 SH.S_TIM10_CH1.ConfNb=1
-SPI2.CalculateBaudRate=27.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI2.CLKPhase=SPI_PHASE_2EDGE
+SPI2.CalculateBaudRate=3.375 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM10.Channel=TIM_CHANNEL_1
@@ -599,11 +601,12 @@ TIM6.IPParameters=Prescaler,Period
 TIM6.Period=65535
 TIM6.Prescaler=107
 TIM7.IPParameters=Prescaler,Period
-TIM7.Period=65535
+TIM7.Period=19
 TIM7.Prescaler=107
-USART3.IPParameters=VirtualMode-Asynchronous
+USART3.BaudRate=19200
+USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
-USART6.BaudRate=115200
+USART6.BaudRate=500000
 USART6.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART6.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
@@ -622,3 +625,4 @@ VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=NUCLEO-F767ZI
 boardIOC=true
+isbadioc=false
