prepared IOs for DigPot integration.

--- a/firmware/firmware quantum/MotherEnigine/MotherEnigine.ioc
+++ b/firmware/firmware quantum/MotherEnigine/MotherEnigine.ioc
@@ -93,58 +93,61 @@ Mcu.Pin30=PE13
 Mcu.Pin31=PE14
 Mcu.Pin32=PE15
 Mcu.Pin33=PB10
-Mcu.Pin34=PB13
-Mcu.Pin35=PB14
-Mcu.Pin36=PD8
-Mcu.Pin37=PD9
-Mcu.Pin38=PG2
-Mcu.Pin39=PG3
+Mcu.Pin34=PB12
+Mcu.Pin35=PB13
+Mcu.Pin36=PB14
+Mcu.Pin37=PD8
+Mcu.Pin38=PD9
+Mcu.Pin39=PD10
 Mcu.Pin4=PE6
-Mcu.Pin40=PG6
-Mcu.Pin41=PG7
-Mcu.Pin42=PC6
-Mcu.Pin43=PC7
-Mcu.Pin44=PC8
-Mcu.Pin45=PC9
-Mcu.Pin46=PA8
-Mcu.Pin47=PA9
-Mcu.Pin48=PA10
-Mcu.Pin49=PA11
+Mcu.Pin40=PD11
+Mcu.Pin41=PG2
+Mcu.Pin42=PG3
+Mcu.Pin43=PG6
+Mcu.Pin44=PG7
+Mcu.Pin45=PC6
+Mcu.Pin46=PC7
+Mcu.Pin47=PC8
+Mcu.Pin48=PC9
+Mcu.Pin49=PA8
 Mcu.Pin5=PC13
-Mcu.Pin50=PA12
-Mcu.Pin51=PA13
-Mcu.Pin52=PA14
-Mcu.Pin53=PC10
-Mcu.Pin54=PC11
-Mcu.Pin55=PC12
-Mcu.Pin56=PD1
-Mcu.Pin57=PD2
-Mcu.Pin58=PD6
-Mcu.Pin59=PD7
+Mcu.Pin50=PA9
+Mcu.Pin51=PA10
+Mcu.Pin52=PA11
+Mcu.Pin53=PA12
+Mcu.Pin54=PA13
+Mcu.Pin55=PA14
+Mcu.Pin56=PC10
+Mcu.Pin57=PC11
+Mcu.Pin58=PC12
+Mcu.Pin59=PD1
 Mcu.Pin6=PC14/OSC32_IN
-Mcu.Pin60=PG9
-Mcu.Pin61=PG10
-Mcu.Pin62=PG11
-Mcu.Pin63=PG12
-Mcu.Pin64=PG13
-Mcu.Pin65=PG15
-Mcu.Pin66=PB3
-Mcu.Pin67=PB4
-Mcu.Pin68=PB5
-Mcu.Pin69=PB7
+Mcu.Pin60=PD2
+Mcu.Pin61=PD6
+Mcu.Pin62=PD7
+Mcu.Pin63=PG9
+Mcu.Pin64=PG10
+Mcu.Pin65=PG11
+Mcu.Pin66=PG12
+Mcu.Pin67=PG13
+Mcu.Pin68=PG15
+Mcu.Pin69=PB3
 Mcu.Pin7=PC15/OSC32_OUT
-Mcu.Pin70=PE0
-Mcu.Pin71=PE1
-Mcu.Pin72=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin73=VP_LWIP_VS_Enabled
-Mcu.Pin74=VP_SYS_VS_tim1
-Mcu.Pin75=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin76=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin77=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin78=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin70=PB4
+Mcu.Pin71=PB5
+Mcu.Pin72=PB7
+Mcu.Pin73=PE0
+Mcu.Pin74=PE1
+Mcu.Pin75=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin76=VP_LWIP_VS_Enabled
+Mcu.Pin77=VP_SYS_VS_tim1
+Mcu.Pin78=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin79=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin8=PF6
+Mcu.Pin80=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin81=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin9=PF9
-Mcu.PinsNb=79
+Mcu.PinsNb=82
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -227,6 +230,10 @@ PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB10.Mode=TX_Only_Simplex_Unidirect_Master
 PB10.Signal=SPI2_SCK
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=PB12
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
@@ -245,7 +252,7 @@ PB4.GPIO_Label=CS_DAC1
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=CS_DAC2
+PB5.GPIO_Label=CS_POTI
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
@@ -307,6 +314,14 @@ PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=DEBUG2
 PD1.Locked=true
 PD1.Signal=GPIO_Output
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=MUTE_POTI
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=ZCEN
+PD11.Locked=true
+PD11.Signal=GPIO_Output
 PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=RD
 PD2.Locked=true
@@ -456,8 +471,8 @@ PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Locked=true
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+PinOutPanel.RotationAngle=-90
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
